Drop to Java 8 and legacy spigot